added ARCVM as subdirectory cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set (CMAKE_CXX_STANDARD 17)
 
 SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ARCVM)
+
 set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/Main.cpp
 )
