Parser and Lexer initial commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ARCVM)
 set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/Main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/Compiler.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/Parser.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/Lexer.cpp
 )
 
 
