added SymbolTable and other misc stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set (CMAKE_CXX_STANDARD 17)
 
 SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ARCVM)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ARCVM-V2)
 
 set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/Main.cpp
@@ -15,6 +15,7 @@ set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/Parser.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/Lexer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/ErrorHandler.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/SymbolTable.cpp
 )
 
 
