now supports basic type inference

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/BytecodeGen.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/BytecodeLinker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/TypeManager.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Compiler/src/TypeInference.cpp
     ${arcvm_source}
 )
 
