ignore more CLion directories

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,13 @@
 /.vscode
 /.vs
 /.idea
-/cmake-build-debug
-/cmake-build-release
 /out
+
+# clion 
+# maybe just ignore all directories with the cmake prefix
+/cmake-build-debug
+/cmake-build-debug-visual-studio
+/cmake-build-release
 
 CMakeSettings.json
 
