--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ARCVM-V2"]
-    path = ARCVM-V2
-    url = https://github.com/BrandonKi/ARCVM-V2.git
+[submodule "ARCVM"]
+    path = ARCVM
+    url = https://github.com/BrandonKi/ARCVM.git
